[package]
name = "nova_wasm_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nova-snark = {git = "https://github.com/lurk-lab/arecibo/", branch = "dev"}
wasm-bindgen = "0.2"
bellpepper-core = { git="https://github.com/lurk-lab/bellpepper", branch="dev", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
flate2 = "1.0"
bincode = "1.3"
tracing = "0.1.37"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
tracing-texray = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# This is needed to ensure halo2curves, which imports pasta-curves, uses the *same* traits in bn256_grumpkin
[patch.crates-io]
pasta_curves = { git = "https://github.com/lurk-lab/pasta_curves", branch = "dev" }
